--- a/src/scss/parts/components/section-nowtv.scss
+++ b/src/scss/parts/components/section-nowtv.scss
@@ -1,29 +1,34 @@
 @import '../vars.scss';
 
-.block-nowtv {
+.nowtv {
     background-color: $white;
     position: relative;
     overflow: hidden;
     padding: 1.5rem 0;
-    .block-nowtv_title {
-        color: $purple;
-        white-space: nowrap;
-        padding-right: 2.5rem;
-        font-size: 1.5rem;
-        font-weight: 500;
+}
+
+.nowtv_title {
+    color: $purple;
+    white-space: nowrap;
+    padding-right: 2.5rem;
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+.nowtv_list {
+    display: flex;
+}
+
+.nowtv_list-item {
+    white-space: nowrap;
+    font-size: 1.5rem;
+    opacity: .5;
+    
+    &:not(:last-child) {
+        margin-right: 2.5rem;
     }
-    .block-nowtv_list {
-        display: flex;
-        &_item {
-            white-space: nowrap;
-            font-size: 1.5rem;
-            opacity: .5;
-            &--active {
-                opacity: 1;
-            }
-            &:not(:last-child) {
-                margin-right: 2.5rem;
-            }
-        }
+
+    &--active {
+        opacity: 1;
     }
 }
