--- a/src/scss/parts/main.scss
+++ b/src/scss/parts/main.scss
@@ -7,6 +7,9 @@
 button {
     background: none;
     border: none;
+    font-size: inherit;
+    font-family: "MyriadPro";
+    cursor: pointer;
 }
 
 @font-face {
