--- a/src/scss/parts/vars.scss
+++ b/src/scss/parts/vars.scss
@@ -2,8 +2,12 @@
 
 $purple : #804284;
 $white : #fff;
+
+$grey : #9E9E9E;
 $greyLight : #f4f4f4;
+$black : #000;
 
 // ui
 
 $mainBorderRadius : .75rem;
+$buttonBorderRadius : .5rem;
