--- a/src/scss/parts/posts/main-posts.scss
+++ b/src/scss/parts/posts/main-posts.scss
@@ -14,6 +14,7 @@
     display: grid;
     grid-template-columns: repeat(2,2fr);
     grid-gap: 1rem;
+    align-items: flex-start;
 }
 
 .left_post {
