--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,6 +34,7 @@
 @import './parts/pages/page-default.scss';
 @import './parts/pages/page-home.scss';
 @import './parts/pages/page-profile.scss';
+@import './parts/pages/page-programms.scss';
 
 @import './parts/main';
 
