--- a/src/scss/parts/components/section-programm.scss
+++ b/src/scss/parts/components/section-programm.scss
@@ -1,11 +1,11 @@
 @import '../vars.scss';
 
 .programm {
-    padding: 2rem 0;
+    padding: 2rem 0 3rem 0 ;
     background-color: #111;
     .section-title {
         color: $white;
-        margin-bottom: 1.5rem;
+        //margin-bottom: 1.5rem;
     }
 }
 
@@ -15,16 +15,84 @@
     /* the slides */
     .slick-slide {
         margin: 0 1rem;
+        outline: none;
+
+        & > div:focus{
+            outline: none;
+        }
     }
     /* the parent */
     .slick-list {
-        margin: 0 1rem;
+        margin: 0 0 0 4rem;
+        padding: 2rem 0 !important;
+    }
+
+    .slick-arrow{
+        width: 50px;
+        height: 50px;
+        &::before{
+            content:"";
+            opacity: 1;
+            font-size: 0;
+            background-color:transparent;
+            padding: 6px;
+            border: 3px solid $white;
+            border-right: none;
+            border-bottom: none; 
+        }
+    }
+
+    .slick-prev{
+        left: 1rem;
+        z-index: 1;
+        transform: rotate(-45deg);
+    }
+    .slick-next{
+        right: 1rem;
+        transform: rotate(135deg);
+    }
+}
+
+.slider_item{
+    position: relative;
+    transition: .2s ease-out;
+
+    &::before{
+        content:"";
+        position: absolute;
+        z-index: 1;
+        height: 100%;
+        width: 1000%;
+        top: 0;
+        left: -500%;
+        background-color: #111;
+        opacity:0;
+        pointer-events: none;
+    }
+
+    &:focus{
+        transform: scale(1.25);
+        z-index: 3;
+        outline: none;
+
+        &::before{
+            opacity: .5;
+        }
+        .slider_item-desc{
+            opacity: 1;
+            border-radius: 1rem;
+        }
+
+        .slider_item-image img{
+            border-radius: 1rem;
+        }
     }
 }
 
 .slider_item-image {
-    height: 35vh;
+    height: 16rem;
     position: relative;
+    z-index: 2;
     overflow: hidden;
     img {
         position: absolute;
@@ -35,3 +103,28 @@
         object-fit: cover;
     }
 }
+
+.slider_item-desc{
+    transition: .2s ease-out;
+    position: absolute;
+    z-index: 2;
+    padding: 2rem;
+    display: flex;
+    opacity: 0;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    text-align: left;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: transparent;
+    color: $white;
+    box-shadow: inset 0 -15rem 6rem 0 rgba(0,0,0,0.6);
+}
+
+.slider_item-buttons a{
+    margin-right: 1rem;
+}
+
