--- a/src/scss/parts/footer/footer.scss
+++ b/src/scss/parts/footer/footer.scss
@@ -1,5 +1,6 @@
 .main-footer {
-    display: grid;
-    grid-template-columns: repeat(8,8fr);
-    grid-gap: 1rem;
+    // display: grid;
+    // grid-template-columns: repeat(8,8fr);
+    // grid-gap: 1rem;
+    margin: 0 auto;
 }
