--- a/src/scss/parts/main.scss
+++ b/src/scss/parts/main.scss
@@ -12,6 +12,16 @@ button {
     cursor: pointer;
 }
 
+ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.wrapper{
+    margin: 0 auto;
+} 
+
 @font-face {
     font-family: "MyriadPro";
     font-style: normal;
