--- a/src/scss/parts/footer/footer.scss
+++ b/src/scss/parts/footer/footer.scss
@@ -1,6 +1,4 @@
 .main-footer {
-    // display: grid;
-    // grid-template-columns: repeat(8,8fr);
-    // grid-gap: 1rem;
     margin: 0 auto;
+    padding: 2rem 0 3rem;
 }
