--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,6 +35,7 @@
 @import './parts/pages/page-home.scss';
 @import './parts/pages/page-profile.scss';
 @import './parts/pages/page-programms.scss';
+@import './parts/pages/page-watch.scss';
 
 @import './parts/main';
 
