--- a/src/scss/parts/ui/buttons.scss
+++ b/src/scss/parts/ui/buttons.scss
@@ -1,3 +1,11 @@
+button{
+    outline: none;
+    &:hover,
+    &:focus {
+        outline: none;
+    }
+}
+
 .button {
     display: inline-block;
     border-radius: $buttonBorderRadius;
