--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,6 +36,7 @@
 @import './parts/pages/page-profile.scss';
 @import './parts/pages/page-programms.scss';
 @import './parts/pages/page-watch.scss';
+@import './parts/pages/page-aboutUs.scss';
 
 @import './parts/main';
 
