page guide-programm and page providers

--- a/src/scss/parts/main.scss
+++ b/src/scss/parts/main.scss
@@ -22,6 +22,10 @@ ul{
     margin: 0 auto;
 } 
 
+a{
+    text-decoration: none;
+}
+
 @font-face {
     font-family: "MyriadPro";
     font-style: normal;
