--- a/src/scss/parts/components/section-programm.scss
+++ b/src/scss/parts/components/section-programm.scss
@@ -46,11 +46,11 @@
     .slick-prev{
         left: 1rem;
         z-index: 1;
-        transform: rotate(-45deg);
+        transform: translateY(-50%) rotate(-45deg);
     }
     .slick-next{
         right: 1rem;
-        transform: rotate(135deg);
+        transform: translateY(-50%) rotate(135deg);
     }
 }
 
