--- a/src/scss/parts/pages/page-aboutUs.scss
+++ b/src/scss/parts/pages/page-aboutUs.scss
@@ -101,11 +101,11 @@
     .slick-prev{
         left: -3rem;
         z-index: 1;
-        transform: rotate(-45deg);
+        transform: translateY(-50%) rotate(-45deg);
     }
     .slick-next{
         right: -3rem;
-        transform: rotate(135deg);
+        transform: translateY(-50%) rotate(135deg);
     }
 
     .slick-slide{
