--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,6 +37,8 @@
 @import './parts/pages/page-programms.scss';
 @import './parts/pages/page-watch.scss';
 @import './parts/pages/page-aboutUs.scss';
+@import './parts/pages/page-providers.scss';
+@import './parts/pages/page-guide.scss';
 
 @import './parts/main';
 
