--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 // plugins
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
+@import "~country-select-js/build/css/countrySelect.css";
 
 // libs
 @import './libs/grid.scss';
