--- a/src/scss/parts/pages/page-home.scss
+++ b/src/scss/parts/pages/page-home.scss
@@ -4,3 +4,11 @@
         margin-bottom: 2rem;
     }
 }
+
+@media only screen and (max-width: 768px) { 
+    .front-posts {
+        .section-title {
+            margin-bottom: 1rem;
+        }
+    }
+}
