--- a/src/scss/parts/components/section-nowtv.scss
+++ b/src/scss/parts/components/section-nowtv.scss
@@ -32,3 +32,19 @@
         opacity: 1;
     }
 }
+
+@media only screen and (max-width: 768px) { 
+    .nowtv_title {
+        padding-right: 1rem;
+    }
+    .nowtv_list {
+        overflow-x: scroll;
+        white-space: nowrap;
+        &::-webkit-scrollbar {
+            display: none;
+        }
+    }
+    .nowtv_list-item {
+        display: inline-block;
+    }
+}
