--- a/src/scss/parts/components/section-programm.scss
+++ b/src/scss/parts/components/section-programm.scss
@@ -2,9 +2,24 @@
 
 .programm {
     padding: 2rem 0 3rem 0 ;
+    position: relative;
     background-color: #111;
+    &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url(../img/dot.gif) left top repeat;
+        background-size: 5rem;
+        opacity: .3;
+        z-index: 0;
+    }
     .section-title {
         color: $white;
+        position: relative;
+        z-index: 1;
         //margin-bottom: 1.5rem;
     }
 }
@@ -13,6 +28,8 @@
 
 .programm_slider {
     overflow: hidden;
+    position: relative;
+    z-index: 1;
     /* the slides */
     .slick-slide {
         margin: 0 1rem;
@@ -60,34 +77,13 @@
     position: relative;
     transition: .2s ease-out;
 
-    &::before{
-        content:"";
-        position: absolute;
-        z-index: 1;
-        height: 100%;
-        width: 1000%;
-        top: 0;
-        left: -500%;
-        background-color: #111;
-        opacity:0;
-        pointer-events: none;
-    }
-
     &:hover {
-        transform: scale(1.25);
+        transform: scale(1.05);
         z-index: 3;
         outline: none;
 
-        &::before{
-            opacity: .5;
-        }
         .programm-list_item-desc{
             opacity: 1;
-            border-radius: 1rem;
-        }
-
-        .programm-list_item-image img{
-            border-radius: 1rem;
         }
     }
 }
@@ -131,3 +127,33 @@
     margin-right: 1rem;
 }
 
+// responsive
+
+@media only screen and (max-width: 768px) {
+    .programm {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    }
+    .programm_slider {
+        white-space: nowrap;
+        overflow-x: scroll;
+        margin-top: 1rem;
+        width: 100%;
+        padding-left: 4.5%;
+        &::-webkit-scrollbar {
+            display: none;
+        }
+    }
+    .programm-list_item {
+        display: inline-block;
+        height: 20vh;
+        width: 80%;
+        &:not(:last-child) {
+            margin-right: .5rem;
+        }
+        .programm-list_item-image {
+            height: 100%;
+        }
+    }
+}
