--- a/src/scss/parts/footer/footer.scss
+++ b/src/scss/parts/footer/footer.scss
@@ -4,3 +4,25 @@
     background-color: $white;
     margin-top: 5rem;
 }
+
+@media only screen and (max-width: 768px) { 
+    .main-footer {
+        .wrapper {
+            display: grid;
+            grid-template-columns: repeat(1,1fr);
+            grid-gap: 2rem;
+        }
+    }
+    .main-footer_socials {
+        order: 1;
+        .socials-list {
+            justify-content: flex-start;
+        }
+    }
+    .main-footer_desc {
+        order: 2;
+    }
+    .main-footer_copypaste {
+        order: 3;
+    }
+}
