--- a/src/scss/parts/pages/page-programms.scss
+++ b/src/scss/parts/pages/page-programms.scss
@@ -9,6 +9,8 @@
         width: 25rem;
         margin-right: 1.2rem;
         margin-top: 1.2rem;
+        transition: transform 0.2s cubic-bezier(0.16, 1, 0.3, 1);
+        box-shadow: 0px 0px 0px rgba($black, .4);
 
         &::before{
             height: 100%;
@@ -27,10 +29,8 @@
         }
 
         &:hover{
-            transform: none;
-            .programm-list_item-image img{
-                border-radius: 0;
-            }
+            transform: scale(1.05);
+            box-shadow: 3px 3px 10px rgba($black, .4);
         }
     }
     .programm-list_item-desc{
