--- a/src/scss/parts/posts/main-posts.scss
+++ b/src/scss/parts/posts/main-posts.scss
@@ -35,7 +35,7 @@
         flex-direction: row;
         .main-post_image {
             width: 60%;
-            height: 50vh;
+            min-height: 50vh;
         }
         .main-post_desc {
             width: 40%;
@@ -59,5 +59,28 @@
     .main-post_title {
         font-size: 1.3rem;
         font-weight: 500;
+    }
+}
+
+@media only screen and (max-width: 768px) {  
+    .main-posts,
+    .main-posts_left,
+    .main-posts_sidebar,
+    .left_post:nth-child(1),
+    .left_post:nth-child(6) {
+        grid-template-columns: repeat(1,1fr);
+        grid-column: 1/1;
+    }
+
+    .left_post:nth-child(1) .main-post_image, 
+    .left_post:nth-child(6) .main-post_image {
+        height: 25vh;
+    }
+
+    .left_post:nth-child(1) .main-post_image,
+    .left_post:nth-child(6) .main-post_image,
+    .left_post:nth-child(1) .main-post_desc, 
+    .left_post:nth-child(6) .main-post_desc {
+        width: 100%;
     }
 }
