--- a/src/scss/parts/pages/single-post.scss
+++ b/src/scss/parts/pages/single-post.scss
@@ -54,3 +54,25 @@
         background-color: rgba($purple, .015);
     }
 }
+
+@media only screen and (max-width: 768px) { 
+    .single-post_wrap {
+        display: block;
+        .page-breadcrumbs {
+            margin-bottom: 2rem;
+        }
+    }
+    
+    .single-post_content {
+        margin-bottom: 2rem;
+        padding: 2rem;
+    }
+
+    .single-post_title {
+        font-size: 1.75rem;
+    }
+
+    
+
+
+}
