--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,6 +32,7 @@
 
 // modals
 @import './parts/components/modals/modals.scss';
+@import './parts/components/modals/modal-pay.scss';
 
 // pages
 @import './parts/pages/page-default.scss';
@@ -43,6 +44,7 @@
 @import './parts/pages/page-providers.scss';
 @import './parts/pages/page-guide.scss';
 @import './parts/pages/single-post.scss';
+@import './parts/pages/page-online.scss';
 
 // main
 @import './parts/main';
