--- a/src/scss/parts/components/section-nowtv.scss
+++ b/src/scss/parts/components/section-nowtv.scss
@@ -17,6 +17,7 @@
 
 .nowtv_list {
     display: flex;
+    -webkit-mask-image: linear-gradient(270deg,transparent 0,#000 25%);
 }
 
 .nowtv_list-item {
