--- a/src/scss/parts/header/header-mobile.scss
+++ b/src/scss/parts/header/header-mobile.scss
@@ -11,10 +11,18 @@
 
 .header-mobile_profile {
     a {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+    }
+    button {
         display: block;
         height: 1.5rem;
         background: url(../img/icons/user-icon.svg) right center no-repeat;
         background-size: contain;
+    }
+    .user-stat_name {
+        color: $purple;
     }
 }
 
