--- a/src/scss/parts/header/main-header.scss
+++ b/src/scss/parts/header/main-header.scss
@@ -89,7 +89,7 @@
         padding: 1rem 0;
         position: relative;
         text-decoration: none;
-        font-size: .85rem;
+        white-space: nowrap;
         &:after {
             content: '';
             position: absolute;
@@ -136,25 +136,26 @@
 .user-stat {
     display: flex;
     align-items: center;
-    
-    .user-stat_pic {
-        width: 2rem;
-        height: 2rem;
-        border-radius: 100%;
-        position: relative;
-        overflow: hidden;
-        margin-right: .75rem;
-        img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+}
+
+.user-stat_pic {
+    width: 2rem;
+    height: 2rem;
+    border-radius: 100%;
+    position: relative;
+    overflow: hidden;
+    margin-right: .75rem;
+    img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
-    .user-stat_name {
-        font-size: .85rem;
-        color: $white;
-    }
+}
+
+.user-stat_name {
+    font-size: .85rem;
+    color: $white;
 }
