--- a/src/scss/parts/header/header-mobile.scss
+++ b/src/scss/parts/header/header-mobile.scss
@@ -10,6 +10,9 @@
 }
 
 .header-mobile_profile {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     a {
         display: flex;
         align-items: center;
@@ -33,7 +36,7 @@
     z-index: 9;
     width: 100%;
     height: 100%;
-    transition: all .1s ease-in-out;
+    transition: all .65s cubic-bezier(0.16, 1, 0.3, 1);
     background-color: $purple;
     display: flex;
     align-items: center;
@@ -54,6 +57,9 @@
             padding: 1rem;
             font-size: 1.5rem;
             justify-content: center;
+            &:after {
+                left: 0;
+            }
         }
     }
     .header-mobile-nav_close {
