--- a/src/scss/parts/pages/page-profile.scss
+++ b/src/scss/parts/pages/page-profile.scss
@@ -141,6 +141,9 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .data-fields_form {
+        padding: 1rem;
+    }
     .user-profile_wrap {
         display: block;
     }
