--- a/src/scss/parts/pages/page-profile.scss
+++ b/src/scss/parts/pages/page-profile.scss
@@ -101,6 +101,7 @@
     }
     &_title {
         transition: all .25s ease-in-out;
+        color: $black;
     }
     &_price {
         transition: all .25s ease-in-out;
