--- a/src/scss/parts/pages/page-programms.scss
+++ b/src/scss/parts/pages/page-programms.scss
@@ -31,7 +31,7 @@
         }
     }
     .programm-list_item-desc{
-        display: none;
+        //display: none;
     }
 }
 .programms_list {
@@ -44,53 +44,6 @@
 
     &:last-child {
         padding-bottom: 4.5rem;
-    }
-}
-
-.programms_modal{
-    opacity: 0;
-    transition: .3s ease-out;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 99999;
-    pointer-events: none;
-    visibility: hidden;
-    .modal-wrapper{
-        position: absolute;
-        width: 100%;
-        height: 100%;
-    }
-
-    .modal-content{
-        position: absolute;
-        z-index: 15;
-        top: 50%;
-        left: calc(50% - 3.2rem);
-        transform: translate(-50%, calc(-50% - 1rem)) scale(1.4);
-        transition: .3s ease-out;
-    }
-
-    .programm-list_item{
-        border-radius: 1rem;
-        overflow: hidden;
-        margin: 0;
-    }
-
-    .programm-list_item-desc{
-        display: flex;
-        opacity: 1;
-    }
-
-    &.opened{
-        opacity: 1; 
-        pointer-events: all;
-        visibility: visible;
-        .modal-content{
-            transform: translate(-50%,-50%) scale(1.4);
-        }
     }
 }
 
