--- a/src/scss/parts/ui/buttons.scss
+++ b/src/scss/parts/ui/buttons.scss
@@ -32,6 +32,10 @@ button{
         background-color: transparent;
         border: 2px solid $white;
         padding: .5rem 2rem;
+        &:hover {
+            background-color: $white;
+            color: $black;
+        }
     }
     &.loading {
         color: transparent;
