--- a/src/scss/parts/posts/main-posts.scss
+++ b/src/scss/parts/posts/main-posts.scss
@@ -36,6 +36,7 @@
         .main-post_image {
             width: 60%;
             min-height: 50vh;
+            height: auto;
         }
         .main-post_desc {
             width: 40%;
