--- a/src/scss/parts/components/breadcrumbs.scss
+++ b/src/scss/parts/components/breadcrumbs.scss
@@ -1,3 +1,7 @@
 .page-breadcrumbs {
     grid-column: 1/8;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
