--- a/src/scss/parts/footer/footer.scss
+++ b/src/scss/parts/footer/footer.scss
@@ -5,6 +5,10 @@
     margin-top: 5rem;
 }
 
+.main-footer_desc {
+    font-weight: bold;
+}
+
 @media only screen and (max-width: 768px) { 
     .main-footer {
         .wrapper {
