--- a/src/scss/parts/pages/page-aboutUs.scss
+++ b/src/scss/parts/pages/page-aboutUs.scss
@@ -7,20 +7,17 @@
 
 .intro{
     background: url("https://liveberlin.ru/wp-content/uploads/2016/12/Berlin_Panorama_Mitte-cover.jpg") 0 0 no-repeat;
-    background-size: 100%;
+    background-size: cover;
     padding: 5rem 0;
     color: $white;
 }
 
 .intro_title{
-    margin: 0 auto;
     font-size: 2rem;
     margin-bottom: 1.5rem;
 }
 
 .intro_desc{
-    margin: 0 auto;
-
     p{
         padding-right: 3.5rem;
         margin-bottom: 2rem;
@@ -33,7 +30,6 @@
 //Partners
 
 .partners{
-    margin: 0 auto;
     padding: 1rem 0;
     align-items: center;
 
@@ -214,16 +210,6 @@
     }
 }
 
-.faces_list-desc{
-    opacity: 0;
-    position: absolute;
-    top: 100%;
-    left: 0; 
-    text-align: center;
-    padding: 1rem 0;
-    width: 100%;
-}
-
 .faces_list-name{
     font-size: 1.5rem;
 }
@@ -317,5 +303,26 @@
     a{
         color: $black;
         text-decoration: none;
+    }
+}
+// responsive
+
+@media only screen and (max-width: 768px) {
+    .about-us_services {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 2rem 0;
+    }
+    .services_form-section {
+        margin-left: 0;
+        width: auto;
+        margin-top: 2rem;
+        .services_form-title {
+            padding: 0;
+        }
+    }
+    .services_desc {
+        padding: 0;
     }
 }
