--- a/src/scss/parts/pages/single-post.scss
+++ b/src/scss/parts/pages/single-post.scss
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(8,8fr);
     grid-gap: 1rem;
-    margin-top: 3rem;
+    margin-top: 2rem;
 }
 
 .single-post_content {
@@ -38,6 +38,35 @@
     }
 }
 
+.post-footer {
+    display: grid;
+    grid-template-columns: repeat(6,6fr);
+    grid-gap: 1rem;
+    margin-top: 2rem;
+    .post-footer_share {
+        grid-column: 1/3; 
+    }
+    .post-footer_link {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        grid-column: 3/7;
+        .copied-text {
+            max-width: 58%;
+            text-overflow: ellipsis;
+            position: relative;
+            overflow: hidden;
+            white-space: nowrap;
+            padding: .75rem 1.5rem;
+            background: #f4f4f4;
+            border-radius: 0.5rem;
+        }
+        .copied-text-btn {
+            max-width: 40%;
+        }
+    }
+}
+
 // правила стилизации для gutenberg
 
 .single-post_val {
@@ -57,6 +86,12 @@
         color: $purple;
         border: 2px solid $purple;
         background-color: rgba($purple, .015);
+
+        max-width: 100%;
+        text-overflow: ellipsis;
+        position: relative;
+        overflow: hidden;
+        white-space: nowrap;
     }
 }
 
@@ -77,7 +112,25 @@
         font-size: 1.75rem;
     }
 
-    
+    .post-footer {
+        grid-template-columns: repeat(1,1fr);
+        [class*="post-footer_"] {
+            grid-column: auto;
+        }
+        .post-footer_link {
+            display: grid;
+            grid-template-columns: repeat(1,1fr);
+            grid-gap: .5rem;
+            .copied-text,
+            .copied-text-btn {
+                max-width: inherit;
+            }
+        }
+    }
 
+    .ya-share2__list {
+        display: grid;
+        grid-template-columns: repeat(5,5fr);
+    }
 
 }
