--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,10 +29,12 @@
 @import './parts/posts/main-posts.scss';
 @import './parts/posts/main-post.scss';
 @import './parts/components/breadcrumbs.scss';
+@import './parts/components/cookie-message.scss';
 
 // modals
 @import './parts/components/modals/modals.scss';
 @import './parts/components/modals/modal-pay.scss';
+@import './parts/components/modals/modal-watch.scss';
 
 // pages
 @import './parts/pages/page-default.scss';
