--- a/src/scss/parts/pages/page-profile.scss
+++ b/src/scss/parts/pages/page-profile.scss
@@ -102,6 +102,10 @@
     &_title {
         transition: all .25s ease-in-out;
         color: $black;
+        .sub-title {
+            display: block;
+            font-size: .65rem;
+        }
     }
     &_price {
         transition: all .25s ease-in-out;
