--- a/src/scss/parts/posts/main-post.scss
+++ b/src/scss/parts/posts/main-post.scss
@@ -23,12 +23,19 @@
 
 .main-post_desc {
     padding: 2rem;
+    .main-post_excerpt {
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        position: relative;
+        overflow: hidden;
+        margin-bottom: 0 !important;
+    }
 }
 
 .main-post_image {
     position: relative;
     overflow: hidden;
-    min-height: 35vh;
     img {
         position: absolute;
         top: 0;
@@ -43,6 +50,12 @@
 .main-post_title {
     font-size: 1.5rem;
     transition: all .25s ease-in-out;
+    font-weight: normal;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    position: relative;
+    overflow: hidden;
 }
 
 .main-post_date {
@@ -62,10 +75,31 @@
         color: $white;
     }
     .main-post_title {
-        font-weight: bold;
+        font-weight: bold !important;
     }
 }
 
 @media only screen and (max-width: 768px) {  
-    
+    .main-posts {
+        .main-post {
+            &:nth-of-type(4n + 1),
+            &:nth-of-type(4n) {
+                .main-post_image {
+                    width: 100%;
+                    height: 30vh;
+                }
+                .main-post_desc {
+                    width: 100%;
+                }
+            } 
+            &:nth-of-type(4n) {
+                .main-post_image {
+                    order: 1;
+                }
+                .main-post_desc {
+                    order: 2;
+                }
+            }
+        }
+    }
 }
