--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,6 +35,7 @@
 @import './parts/components/modals/modals.scss';
 @import './parts/components/modals/modal-pay.scss';
 @import './parts/components/modals/modal-watch.scss';
+@import './parts/components/modals/modal-login.scss';
 
 // pages
 @import './parts/pages/page-default.scss';
