--- a/src/scss/parts/components/note-form.scss
+++ b/src/scss/parts/components/note-form.scss
@@ -11,6 +11,11 @@
     font-weight: normal;
     transition: all 0.6s cubic-bezier(0.68, -0.6, 0.32, 1.6);
 
+    a {
+        color: $purple;
+        border-bottom: 2px solid rgba($purple, .5);
+    }
+
     // исходное состояние
     opacity: 0;
     transform: translateY(2rem);
