--- a/src/scss/parts/pages/page-aboutUs.scss
+++ b/src/scss/parts/pages/page-aboutUs.scss
@@ -6,18 +6,40 @@
 // Intro
 
 .intro{
-    background: url("https://liveberlin.ru/wp-content/uploads/2016/12/Berlin_Panorama_Mitte-cover.jpg") 0 0 no-repeat;
-    background-size: cover;
     padding: 5rem 0;
     color: $white;
+    position: relative;
+    overflow: hidden;
+}
+
+.about-intro_bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: brightness(50%);
+    }
 }
 
 .intro_title{
     font-size: 2rem;
     margin-bottom: 1.5rem;
+    position: relative;
+    z-index: 1;
 }
 
 .intro_desc{
+    position: relative;
+    z-index: 1;
     p{
         padding-right: 3.5rem;
         margin-bottom: 2rem;
